--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>THE DARE</title>
+  <title>DARE</title>
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="tabs.css">
