--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>DARE</title>
+  <title>THE DARE</title>
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="tabs.css">
@@ -212,8 +212,8 @@
       <br>
       <br>
       <br>
-
       <img src="images/ans.png" alt="artsnovascotia" width="100" style="padding: 10 px">
+      <img src="images/laurel.png" alt="nationalfilmboard" width="150" style="padding: 10 px">
       <img src="images/nfb.png" alt="nationalfilmboard" width="100" style="padding: 10 px">
 
     </div>
@@ -252,10 +252,10 @@
   </div>
   <div class="footer">
     <div class="footer-links">
-      <a href="https://vimeo.com/307119276" target="blank_"><i class="fab fa-vimeo"></i></a>
+      <!-- <a href="https://vimeo.com/307119276" target="blank_"><i class="fab fa-vimeo"></i></a> -->
       <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-facebook"></i></a>
       <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-facebook"></i></a>
     </div>
     <div class="footer-copyright">
       <!-- Made with <i class="fas fa-heart"></i> -->
