--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700|Josefin+Sans:400,600,700,400italic,600italic);
 
   body{
-   font-family: 'josefin sans';
+   font-family: 'helvetica';
    font-size: 16px;
    margin: 0;
  }
@@ -54,16 +54,16 @@
   }*/
 
   h1, h2, h3, h4, h5, h6{
-   font-family: montserrat;
+   font-family: arial;
  }
  .font-2{
-   font-family: 'josefin sans';
+   font-family: 'arial';
    font-weight: 500;
  }
  .title{ letter-spacing: .3em; text-transform: uppercase; }
  .text-light{ color: #fff }
  .font-alt{
-   font-family: 'georgia';
+   font-family: 'arial';
    font-style: italic;
    color: #666;
  }
