--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700|Josefin+Sans:400,600,700,400italic,600italic);
 
   body{
-   font-family: 'helvetica';
+   font-family: 'arial';
    font-size: 16px;
    margin: 0;
  }
