--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
   body{
    font-family: 'arial';
-   font-size: 16px;
+   /* It's all .. */
+   font-size: 20px;
    margin: 0;
  }
 
@@ -53,12 +54,18 @@
   padding-top: 50px;
   }*/
 
-  h1, h2, h3, h4, h5, h6{
+h2, h3, h4, h5, h6{
    font-family: arial;
  }
+
+h1 {
+  font-size: 75px;
+  /* font-family: "" !important; */
+}
+
  .font-2{
    font-family: 'arial';
-   font-weight: 500;
+   font-weight: 100;
  }
  .title{ letter-spacing: .3em; text-transform: uppercase; }
  .text-light{ color: #fff }
@@ -122,17 +129,17 @@
   align-items: center;
 }
 .footer-links a {
-  color: #FFFFFF;
+  color: #FDCD2F;
   /*padding: 25px;*/
-  opacity: 0.85;
+  /* opacity: 0.85; */
   text-decoration: none;
   text-align: center;
   font-size: 24px;
   padding: 25px 10px;
 }
 .footer-links a:hover {
-  opacity: 1;
-  color: #FDCD2F;
+  /* opacity: 1; */
+  color: #FFFFFF;
 }
 .footer .fa-heart {
   color: #D23333;
@@ -212,9 +219,9 @@
       <br>
       <br>
       <br>
-      <img src="images/ans.png" alt="artsnovascotia" width="100" style="padding: 10 px">
-      <img src="images/laurel.png" alt="nationalfilmboard" width="150" style="padding: 10 px">
-      <img src="images/nfb.png" alt="nationalfilmboard" width="100" style="padding: 10 px">
+      <!-- <img src="images/ans.png" alt="artsnovascotia" width="100" style="padding: 10 px"> -->
+      <img src="images/laurel.png" alt="nationalfilmboard" width="200" style="padding: 10 px">
+      <!-- <img src="images/nfb.png" alt="nationalfilmboard" width="100" style="padding: 10 px"> -->
 
     </div>
     <a href="#" class="sd"><i class="fas fa-angle-down" style="font-size: 30px"></i></a>
@@ -225,9 +232,9 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h2 class="text-uppercase">THE DARE</h2>
-				<p class="font-alt">A son is challenged by his father to complete a solo trip through India.</p>
+				<p class="font-alt">A son is challenged by his father to complete a solo trip through India. An off-the-beaten-road coming of age trip that's all about the journey.</p>
         <p>8 minutes; 30 seconds</p>
-        <p> <img src="images/poster.png" alt="" width="150"></p>
+        <p> <img src="images/poster.png" alt="" width="180"></p>
       </div>
       <div class="col-md-6">
         <p style="padding-top: 47px">
@@ -253,6 +260,7 @@
   <div class="footer">
     <div class="footer-links">
       <!-- <a href="https://vimeo.com/307119276" target="blank_"><i class="fab fa-vimeo"></i></a> -->
+      <a href="https://www.imdb.com/title/tt9614778/?ref_=fn_al_tt_3" target="blank_"><i class="fab fa-imdb"></i></a>
       <a href="#"><i class="fab fa-instagram"></i></a>
       <a href="#"><i class="fab fa-twitter"></i></a>
       <a href="#"><i class="fab fa-facebook"></i></a>
@@ -261,6 +269,9 @@
       <!-- Made with <i class="fas fa-heart"></i> -->
       <p>THE DARE © 2019</p>
       <p>Side Road Productions</p>
+      <img src="images/ans.png" alt="artsnovascotia" width="100" style="padding: 10 px">
+      <!-- <img src="images/laurel.png" alt="nationalfilmboard" width="150" style="padding: 10 px"> -->
+      <img src="images/nfb.png" alt="nationalfilmboard" width="100" style="padding: 10 px">
     </div>
   </div>
   <!--  <div class="container" style="height: 40vh"></div> -->
