--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 
   <style>
-  @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700|Josefin+Sans:400,600,700,400italic,600italic);
+  /* @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700|Josefin+Sans:400,600,700,400italic,600italic); */
 
   body{
-   font-family: 'arial';
+   font-family: 'helvetica';
    /* It's all .. */
-   font-size: 20px;
+   font-size: 18px;
    margin: 0;
  }
 
