Added Media Queries

--- a/index.html
+++ b/index.html
@@ -63,6 +63,34 @@ h1 {
   /* font-family: "" !important; */
 }
 
+/* ##### MEDIA QUERIES FOR IPHONE ##### */
+
+/* iPhone 5 and 5s */
+/* @media only screen
+and (min-device-width : 320px)
+and (max-device-width : 568px) { STYLES GO HERE } */
+
+/* iPhone 6, 7, and 8 */
+@media only screen and (min-width : 375px)
+and (max-width : 812px) {
+  h1 {
+    font-size: 2em;
+  }
+}
+
+/* iPhone 6, 7, and 8 Plus */
+/* @media only screen
+and (min-device-width : 414px)
+and (max-device-width : 736px) { STYLES GO HERE } */
+
+/* iPhone X */
+/* @media only screen
+and (min-device-width : 375px)
+and (max-device-width : 812px)
+and (-webkit-device-pixel-ratio : 3) { STYLES GO HERE } */
+
+/* ##### */
+
  .font-2{
    font-family: 'arial';
    font-weight: 100;
