--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
   position: fixed;
   top: 0;
 }
+
+
 .hero-title{
 	display: table-cell;
 	vertical-align: middle;
@@ -74,8 +76,21 @@ and (max-device-width : 568px) { STYLES GO HERE } */
 @media only screen and (min-width : 375px)
 and (max-width : 812px) {
   h1 {
-    font-size: 2em;
+    font-size: 4em !important;
+    margin-top: 5px !important;
+    vertical-align: top !important;
+    /* padding-bottom: 250px !important; */
   }
+	.hero-inner{
+		background-image: linear-gradient(-225deg, rgba(0, 101, 168, 0.6) 0%, rgba(0, 36, 61, 0.6) 50%), url(images/banner.jpg);
+		background-size: cover;
+		background-position: center;
+		display: table;
+		width: 100%;
+		height: 95vh;
+		/* position: fixed; */
+		top: 0;
+	}
 }
 
 /* iPhone 6, 7, and 8 Plus */
