--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@ and (max-width : 812px) {
     /* padding-bottom: 250px !important; */
   }
 	.hero-inner{
-		background-image: linear-gradient(-225deg, rgba(0, 101, 168, 0.6) 0%, rgba(0, 36, 61, 0.6) 50%), url(images/banner.jpg);
+		background-image: linear-gradient(-225deg, rgba(0, 101, 168, 0.6) 0%, rgba(0, 36, 61, 0.6) 50%), url(images/banner-mobile.png);
 		background-size: cover;
 		background-position: center;
 		display: table;
 		width: 100%;
 		height: 95vh;
-		/* position: fixed; */
+		position: fixed;
 		top: 0;
 	}
 }
