--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  }
 
  .hero{
-   height: 100vh;
+   height: 99vh;
    width: 100%;
    position: fixed;
    top: 0;
@@ -48,8 +48,14 @@
 
 .hero-title{
 	display: table-cell;
-	vertical-align: middle;
+	vertical-align: top;
+  /* padding-top: 175px; */
 	text-align: center;
+}
+
+img {
+  padding: 10px;
+  padding-bottom: 100px;
 }
 
 /*.hero-title img {
@@ -79,18 +85,29 @@ and (max-width : 812px) {
     font-size: 4em !important;
     margin-top: 5px !important;
     vertical-align: top !important;
+    top: 0 !important;
     /* padding-bottom: 250px !important; */
   }
 	.hero-inner{
 		background-image: linear-gradient(-225deg, rgba(0, 101, 168, 0.6) 0%, rgba(0, 36, 61, 0.6) 50%), url(images/banner-mobile.png);
 		background-size: cover;
 		background-position: center;
-		display: table;
+		/* display: table; */
 		width: 100%;
 		height: 95vh;
 		position: fixed;
 		top: 0;
 	}
+
+  .hero-title{
+  	/* display: table-cell; */
+  	vertical-align: top;
+    padding: 15px;
+  	text-align: center;
+  }
+  img{
+    padding-top: 100px;
+  }
 }
 
 /* iPhone 6, 7, and 8 Plus */
@@ -255,15 +272,15 @@ and (-webkit-device-pixel-ratio : 3) { STYLES GO HERE } */
   <div class="hero">
    <div class="hero-inner">
      <div class="hero-title">
-
-      <h1 class="text-light title font-2">THE DARE</h1>
+       <img src="images/laurel.png" alt="nationalfilmboard" width="200" style="padding: 10 px">
+      <h2 class="text-light title font-2">THE</h2>
+      <h1 class="text-light title font-2">DARE</h1>
       <p class="text-light">It's all about the journey.</p>
 
       <br>
       <br>
       <br>
       <!-- <img src="images/ans.png" alt="artsnovascotia" width="100" style="padding: 10 px"> -->
-      <img src="images/laurel.png" alt="nationalfilmboard" width="200" style="padding: 10 px">
       <!-- <img src="images/nfb.png" alt="nationalfilmboard" width="100" style="padding: 10 px"> -->
 
     </div>
@@ -273,26 +290,28 @@ and (-webkit-device-pixel-ratio : 3) { STYLES GO HERE } */
 <div class="content clearfix">
 	<div class="container" style="padding-top: 60px">
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6" style="padding: 25px">
 				<h2 class="text-uppercase">THE DARE</h2>
 				<p class="font-alt">A son is challenged by his father to complete a solo trip through India. An off-the-beaten-road coming of age trip that's all about the journey.</p>
         <p>8 minutes; 30 seconds</p>
         <p> <img src="images/poster.png" alt="" width="180"></p>
       </div>
-      <div class="col-md-6">
-        <p style="padding-top: 47px">
+      <div class="col-md-6" style="padding: 25px">
+        <div class="blurb-bio">
+            <p style="padding-top: 60px">
 
-          An experimental hybrid fiction of a real journey; road movie meets documentary.
+              An experimental hybrid fiction of a real journey; road movie meets documentary.
 
-          Shot in India on a Canon 5D. Using a stills camera as a video camera, we set up shots in the streets using the real world as our setting.
+              Shot in India on a Canon 5D. Using a stills camera as a video camera, we set up shots in the streets using the real world as our setting.
 
-          Porter wanted to capture India’s beauty and surge of life. He was looking for the sensory experience of an outsider travelling through another land and responding visually to the intensity and movement of India.
+              Porter wanted to capture India’s beauty and surge of life. He was looking for the sensory experience of an outsider travelling through another land and responding visually to the intensity and movement of India.
 
-          Porter has four children and on their eighteenth birthdays has taken them somewhere in the world to encounter themselves. These are challenging and off-the-beaten path journeys. Coming of age trips. His intention being to help them see beyond the comfort and privilege of their North American world. For each of them, these trips have been life changing experiences.
+              Porter has four children and on their eighteenth birthdays has taken them somewhere in the world to encounter themselves. These are challenging and off-the-beaten path journeys. Coming of age trips. His intention being to help them see beyond the comfort and privilege of their North American world. For each of them, these trips have been life changing experiences.
 
-          The film is about him and them. It is an outsider film about a young man moving through a world that is not his. It is about him being stripped of his comfort zone, losing ego and confidence, until he becomes unafraid and can finally glimpse himself and those around him.
+              The film is about him and them. It is an outsider film about a young man moving through a world that is not his. It is about him being stripped of his comfort zone, losing ego and confidence, until he becomes unafraid and can finally glimpse himself and those around him.
 
-        </p>
+            </p>
+        </div>
         <br>
         <br>
         <br>
@@ -310,11 +329,12 @@ and (-webkit-device-pixel-ratio : 3) { STYLES GO HERE } */
     </div>
     <div class="footer-copyright">
       <!-- Made with <i class="fas fa-heart"></i> -->
-      <p>THE DARE © 2019</p>
-      <p>Side Road Productions</p>
-      <img src="images/ans.png" alt="artsnovascotia" width="100" style="padding: 10 px">
+      <h4>© THE DARE 2019</h4>
+      <h4>Side Road Productions</h4>
+      <br>
+      <img src="images/ans.png" alt="artsnovascotia" width="90" style="padding: 10 px">
       <!-- <img src="images/laurel.png" alt="nationalfilmboard" width="150" style="padding: 10 px"> -->
-      <img src="images/nfb.png" alt="nationalfilmboard" width="100" style="padding: 10 px">
+      <img src="images/nfb.png" alt="nationalfilmboard" width="90" style="padding: 10 px">
     </div>
   </div>
   <!--  <div class="container" style="height: 40vh"></div> -->
