Viewport Meta Tag Added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content= "width=device-width, initial-scale=1.0">
+
   <title>THE DARE</title>
 
   <link rel="stylesheet" href="style.css">
@@ -54,8 +56,8 @@
 }
 
 img {
-  padding: 10px;
-  padding-bottom: 100px;
+  padding-top: 50px;
+  padding-bottom: 100px
 }
 
 /*.hero-title img {
@@ -94,7 +96,8 @@ and (max-width : 812px) {
 		background-position: center;
 		/* display: table; */
 		width: 100%;
-		height: 95vh;
+    margin: auto;
+		height: 100vh;
 		position: fixed;
 		top: 0;
 	}
@@ -106,7 +109,8 @@ and (max-width : 812px) {
   	text-align: center;
   }
   img{
-    padding-top: 100px;
+    padding-top: 10px;
+    width: 200px;
   }
 }
 
