--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ img {
   padding-top: 50px;
   }*/
 
-h2, h3, h4, h5, h6{
+h2, h3, h5, h6{
    font-family: arial;
  }
 
@@ -108,11 +108,30 @@ and (max-width : 812px) {
     padding: 15px;
   	text-align: center;
   }
+
   img{
     padding-top: 10px;
     width: 200px;
   }
+
+  h4{
+   font-family: 'helvetica';
+   /* It's all .. */
+   font-size: 21px !important;
+   padding: 15px;
+   margin: 0;
+  }
 }
+
+h4{
+ font-family: 'helvetica';
+ /* It's all .. */
+ font-size: 18px;
+ padding: 15px;
+ margin: 0;
+}
+
+
 
 /* iPhone 6, 7, and 8 Plus */
 /* @media only screen
@@ -198,7 +217,7 @@ and (-webkit-device-pixel-ratio : 3) { STYLES GO HERE } */
   /* opacity: 0.85; */
   text-decoration: none;
   text-align: center;
-  font-size: 24px;
+  font-size: 30px;
   padding: 25px 10px;
 }
 .footer-links a:hover {
@@ -279,7 +298,7 @@ and (-webkit-device-pixel-ratio : 3) { STYLES GO HERE } */
        <img src="images/laurel.png" alt="nationalfilmboard" width="200" style="padding: 10 px">
       <h2 class="text-light title font-2">THE</h2>
       <h1 class="text-light title font-2">DARE</h1>
-      <p class="text-light">It's all about the journey.</p>
+      <h4 class="text-light">It's all about the journey.</h4>
 
       <br>
       <br>
@@ -298,7 +317,7 @@ and (-webkit-device-pixel-ratio : 3) { STYLES GO HERE } */
 				<h2 class="text-uppercase">THE DARE</h2>
 				<p class="font-alt">A son is challenged by his father to complete a solo trip through India. An off-the-beaten-road coming of age trip that's all about the journey.</p>
         <p>8 minutes; 30 seconds</p>
-        <p> <img src="images/poster.png" alt="" width="180"></p>
+        <p> <img src="images/poster.png" alt="" style="padding-bottom: 5px" width="180"></p>
       </div>
       <div class="col-md-6" style="padding: 25px">
         <div class="blurb-bio">
@@ -324,6 +343,9 @@ and (-webkit-device-pixel-ratio : 3) { STYLES GO HERE } */
     </div>
   </div>
   <div class="footer">
+    <img src="images/nfb.png" alt="nationalfilmboard" width="85" style="padding: 10 px">
+    <img src="images/ans.png" alt="artsnovascotia" width="90" style="padding: 10 px">
+    <!-- <img src="images/laurel.png" alt="nationalfilmboard" width="150" style="padding: 10 px"> -->
     <div class="footer-links">
       <!-- <a href="https://vimeo.com/307119276" target="blank_"><i class="fab fa-vimeo"></i></a> -->
       <a href="https://www.imdb.com/title/tt9614778/?ref_=fn_al_tt_3" target="blank_"><i class="fab fa-imdb"></i></a>
@@ -336,9 +358,6 @@ and (-webkit-device-pixel-ratio : 3) { STYLES GO HERE } */
       <h4>© THE DARE 2019</h4>
       <h4>Side Road Productions</h4>
       <br>
-      <img src="images/ans.png" alt="artsnovascotia" width="90" style="padding: 10 px">
-      <!-- <img src="images/laurel.png" alt="nationalfilmboard" width="150" style="padding: 10 px"> -->
-      <img src="images/nfb.png" alt="nationalfilmboard" width="90" style="padding: 10 px">
     </div>
   </div>
   <!--  <div class="container" style="height: 40vh"></div> -->
