--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content= "width=device-width, initial-scale=1.0">
@@ -111,7 +111,7 @@ and (max-width : 812px) {
 
   img{
     padding-top: 10px;
-    width: 200px;
+    width: 110px;
   }
 
   h4{
@@ -293,34 +293,34 @@ and (-webkit-device-pixel-ratio : 3) { STYLES GO HERE } */
 
 <body>
   <div class="hero">
-   <div class="hero-inner">
-     <div class="hero-title">
-       <img src="images/laurel.png" alt="nationalfilmboard" width="200" style="padding: 10 px">
-      <h2 class="text-light title font-2">THE</h2>
-      <h1 class="text-light title font-2">DARE</h1>
-      <h4 class="text-light">It's all about the journey.</h4>
+    <div class="hero-inner">
+      <div class="hero-title">
+        <img src="images/Madrid-International-Film-Festival.png" alt="" width="200" style="padding: 10 px"><img src="images/Amsterdam-Film-Festival.png" alt="" width="200" style="padding: 10 px"><img src="images/Van-Gogh-Award.png" alt="" width="200" style="padding: 10 px">
+        <h2 class="text-light title font-2">THE</h2>
+        <h1 class="text-light title font-2">DARE</h1>
+        <h4 class="text-light">It's all about the journey.</h4>
 
-      <br>
-      <br>
-      <br>
-      <!-- <img src="images/ans.png" alt="artsnovascotia" width="100" style="padding: 10 px"> -->
-      <!-- <img src="images/nfb.png" alt="nationalfilmboard" width="100" style="padding: 10 px"> -->
+        <br>
+        <br>
+        <br>
+        <!-- <img src="images/ans.png" alt="artsnovascotia" width="100" style="padding: 10 px"> -->
+        <!-- <img src="images/nfb.png" alt="nationalfilmboard" width="100" style="padding: 10 px"> -->
 
-    </div>
-    <a href="#" class="sd"><i class="fas fa-angle-down" style="font-size: 30px"></i></a>
-  </div>
-</div>
-<div class="content clearfix">
-	<div class="container" style="padding-top: 60px">
-		<div class="row">
-			<div class="col-md-6" style="padding: 25px">
-				<h2 class="text-uppercase">THE DARE</h2>
-				<p class="font-alt">A son is challenged by his father to complete a solo trip through India. An off-the-beaten-road coming of age trip that's all about the journey.</p>
-        <p>8 minutes; 30 seconds</p>
-        <p> <img src="images/poster.png" alt="" style="padding-bottom: 5px" width="180"></p>
       </div>
-      <div class="col-md-6" style="padding: 25px">
-        <div class="blurb-bio">
+      <a href="#" class="sd"><i class="fas fa-angle-down" style="font-size: 30px"></i></a>
+    </div>
+  </div>
+  <div class="content clearfix">
+    <div class="container" style="padding-top: 60px">
+      <div class="row">
+        <div class="col-md-6" style="padding: 25px">
+          <h2 class="text-uppercase">THE DARE</h2>
+          <p class="font-alt">A son is challenged by his father to complete a solo trip through India. An off-the-beaten-road coming of age trip that's all about the journey.</p>
+          <p>8 minutes; 30 seconds</p>
+          <p> <img src="images/poster.png" alt="" style="padding-bottom: 5px" width="180"></p>
+        </div>
+        <div class="col-md-6" style="padding: 25px">
+          <div class="blurb-bio">
             <p style="padding-top: 60px">
 
               An experimental hybrid fiction of a real journey; road movie meets documentary.
@@ -334,40 +334,40 @@ and (-webkit-device-pixel-ratio : 3) { STYLES GO HERE } */
               The film is about him and them. It is an outsider film about a young man moving through a world that is not his. It is about him being stripped of his comfort zone, losing ego and confidence, until he becomes unafraid and can finally glimpse himself and those around him.
 
             </p>
+          </div>
+          <br>
+          <br>
+          <br>
+          <br>
         </div>
-        <br>
-        <br>
-        <br>
+      </div>
+    </div>
+    <div class="footer">
+      <img src="images/nfb.png" alt="nationalfilmboard" width="85" style="padding: 10 px">
+      <img src="images/ans.png" alt="artsnovascotia" width="90" style="padding: 10 px">
+      <!-- <img src="images/laurel.png" alt="nationalfilmboard" width="150" style="padding: 10 px"> -->
+      <div class="footer-links">
+        <!-- <a href="https://vimeo.com/307119276" target="blank_"><i class="fab fa-vimeo"></i></a> -->
+        <a href="https://www.imdb.com/title/tt9614778/?ref_=fn_al_tt_3" target="blank_"><i class="fab fa-imdb"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-facebook"></i></a>
+      </div>
+      <div class="footer-copyright">
+        <!-- Made with <i class="fas fa-heart"></i> -->
+        <h4>© THE DARE 2019</h4>
+        <h4>Side Road Productions</h4>
         <br>
       </div>
     </div>
+    <!--  <div class="container" style="height: 40vh"></div> -->
+
   </div>
-  <div class="footer">
-    <img src="images/nfb.png" alt="nationalfilmboard" width="85" style="padding: 10 px">
-    <img src="images/ans.png" alt="artsnovascotia" width="90" style="padding: 10 px">
-    <!-- <img src="images/laurel.png" alt="nationalfilmboard" width="150" style="padding: 10 px"> -->
-    <div class="footer-links">
-      <!-- <a href="https://vimeo.com/307119276" target="blank_"><i class="fab fa-vimeo"></i></a> -->
-      <a href="https://www.imdb.com/title/tt9614778/?ref_=fn_al_tt_3" target="blank_"><i class="fab fa-imdb"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-facebook"></i></a>
-    </div>
-    <div class="footer-copyright">
-      <!-- Made with <i class="fas fa-heart"></i> -->
-      <h4>© THE DARE 2019</h4>
-      <h4>Side Road Productions</h4>
-      <br>
-    </div>
-  </div>
-  <!--  <div class="container" style="height: 40vh"></div> -->
-
-</div>
 
 
 
 
-<!-- <div class="bios">
+  <!-- <div class="bios">
   <img src="images/christopher.jpg" class="avatar-large"/>
   <p>Porter is a cinematographer, fine arts photographer, filmmaker, and writer based in Nova Scotia, Canada. As lighting director, credits include:  Coffee and Cigarettes, Down by Law, Brokeback Mountain, The Shipping News, Breaking the Waves, Kids and has worked with Jim Jarmush, Wim Wenders, Lars Von Trier, Stephen Frears, Lasse Halstrom, Sally Potter, and DOPs Robbie Mueller, Chris Menges, Oliver Stapleton, Luciano Tovoli… to name a few. His feature credits as DOP include The Disappeared, Relative Happiness,  Roller Town, and Just Buried. He has produced and shot three shorts, including Zed Crew, which was officially invited to Cannes. His short, The Dare, was shot solo in India with his son.</p>
 </div> -->
